Fix header letter spacing

--- a/assets/css/pages/landing/header.scss
+++ b/assets/css/pages/landing/header.scss
@@ -15,11 +15,13 @@
             transform: skew(-3deg, 0.5deg);
             .title {
                 font-weight: bold;
+                letter-spacing: 0;
                 font-size: 5em;
                 color: $background;
                 margin: 0;
                 transform: skew(3deg, 0.5deg);
                 i {
+                    letter-spacing: 0;
                     font-style: normal;
                     font-weight: 300;
                 }
